# xre2

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  build-pypi-linux.sh  kmpkg-configuration.json  kmpkg.json  release-pypi-linux.sh  setup.py
benchmark/: CMakeLists.txt  config.h  config.h.in  regexp_benchmark.cc
cmake/: xre2_config.cmake.in  xre2_cpack_config.cmake  xre2_cxx_config.cmake  xre2_deps.cmake  xre2_test.cmake
examples/: foo_ex.cc
kmcmake/: kmcmake_module.cmake  kmcmake_option.cmake
kmcmake/package/: CPack.STGZ_Header.sh.in
kmcmake/tools/: default_setting.cmake  git_commit.cmake  kmcmake_cc_benchmark.cmake  kmcmake_cc_binary.cmake  kmcmake_cc_interface.cmake  kmcmake_cc_library.cmake  kmcmake_cc_object.cmake  kmcmake_cc_proto.cmake  kmcmake_cc_test.cmake  simd_detect.cmake
tests/: CMakeLists.txt  charclass_test.cc  compile_test.cc  config.h.in  dfa_test.cc  exhaustive1_test.cc  exhaustive2_test.cc  exhaustive3_test.cc  exhaustive_test.cc  filtered_re2_test.cc  mimics_pcre_test.cc  parse_test.cc  possible_match_test.cc  random_test.cc  re2_arg_test.cc  re2_test.cc  regexp_test.cc  required_prefix_test.cc  search_test.cc  set_test.cc  simplify_test.cc  string_generator_test.cc
xre2/: CMakeLists.txt  bitmap256.cc  bitmap256.h  bitstate.cc  compile.cc  dfa.cc  filtered_re2.cc  filtered_re2.h  make_perl_groups.pl  make_unicode_casefold.py  make_unicode_groups.py  mimics_pcre.cc  nfa.cc  onepass.cc  parse.cc  perl_groups.cc  pod_array.h  prefilter.cc  prefilter.h  prefilter_tree.cc  prefilter_tree.h  prog.cc  prog.h  re2.cc  re2.h  regexp.cc  regexp.h  set.cc  set.h  simplify.cc  sparse_array.h  sparse_set.h  tostring.cc  unicode_casefold.cc  unicode_casefold.h  unicode_groups.cc  unicode_groups.h  version.h.in  walker-inl.h
xre2/testing/: backtrack.cc  dump.cc  exhaustive_tester.cc  exhaustive_tester.h  null_walker.cc  pcre.cc  pcre.h  regexp_generator.cc  regexp_generator.h  string_generator.cc  string_generator.h  tester.cc  tester.h
xre2/util/: rune.cc  strutil.cc  strutil.h  utf.h
